<resources>
    <string name="app_name">tddd80-projekt</string>
    <string name="title_home">Hem</string>
    <string name="title_add_post">Lägg upp annons</string>
    <string name="title_profile">Profil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">QuickSell</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string-array name="categories_array">
        <item>Fordon</item>
        <item>Elektronik</item>
        <item>Kläder</item>
        <item>Hemmet</item>
        <item>Husdjur</item>
        <item>Växter</item>
        <item>Mat</item>
        <item>Biljetter</item>
    </string-array>
    <string-array name="camera_or_gallery">
        <item>Kamera</item>
        <item>Galleri</item>
    </string-array>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="ladda_upp_bild">Ladda upp bild</string>
    <string name="post_title">Titel</string>
    <string name="post_description">Beskrivning</string>
    <string name="image">image</string>
    <string name="beskrivning">Beskrivning</string>
    <string name="titel">Titel</string>
    <string name="anv_nd_nuvarande_plats">Använd nuvarande plats</string>
    <string name="pris">Pris</string>
    <string name="add_post">Lägg till annons</string>
    <string name="logga_ut">Logga ut</string>
    <string name="menu">Menu</string>
</resources>