<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/post_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/home_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/LightSkyBlue"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/post_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center"
                android:text="Plats"
                android:textColor="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/post_picture"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="5dp"
                        android:contentDescription="@string/image" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/post_likes"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="0"
                            android:textColor="#000000"
                            android:textSize="24sp" />

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="0"
                            app:srcCompat="@drawable/ic_baseline_thumb_up_alt_24" />

                        <TextView
                            android:id="@+id/post_username"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:text="användarnamn"
                            android:textColor="#000000" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/post_title"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="end"
                        android:text="@string/titel"
                        android:textColor="@color/black"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/post_description"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_gravity="bottom"
                        android:text="@string/beskrivning"
                        android:textColor="@color/cardview_dark_background"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/post_price"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:layout_gravity="bottom"

                        android:text="Pris 20000"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>